<resources>
    <string name="app_name">GamesCloud</string>
    <string name="number_of_downloads">Number of downloads:</string>
    <string name="platforms">Platforms:</string>
    <string name="genres">Genres:</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="favorite_games">Favorite games</string>
    <string name="message_sent">message sent</string>
    <string name="main_screen">Main screen</string>
    <string name="tap_an_item_to_get_the_description_slide_to_unlike">tap an item to get the description\nslide to unlike</string>
    <string name="unlike">Unlike</string>
    <string name="friends_start">tap to go to chat\nlong tap to see the details\nslide to remove from your friends list</string>
    <string name="welcome_to_chat">welcome to chat</string>
    <string name="your_friend_details">your friend details</string>
    <string name="userid">\"userId: \"</string>
    <string name="like">Like</string>
    <string name="you_cant_continue_if_you_dont_like_this_game">you can\'t continue if you don\'t like this game</string>
    <string name="you_liked_this_game">you liked this game</string>
    <string name="you_and">\"you and \"</string>
    <string name="people_likes_this_game">\" people like this game\"</string>
    <string name="no_one_likes_this_game">no one likes this game</string>
    <string name="someone_likes_this_game">someone likes this game</string>
    <string name="you_and_someone_liked_this_game">you and someone liked this game</string>
    <string name="Login_successful">Login successful</string>
    <string name="Login_unsuccessful">Login unsuccessful</string>
    <string name="main_screen_start">tap an item to get the description\nslide to like or unlike</string>
    <string name="requests_start">tap to confirm\nslide to remove</string>
    <string name="add_friend">add friend</string>
    <string name="tap_yes_if_you_want_to_add">\"tap yes if you want to add \"</string>
    <string name="to_your_friends_tap_no_if_you_want_to_remove_this_request">\" to your friends\ntap no if you want to remove this request\"</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="confirm">\" confirm\"</string>
    <string name="we_wait_to">\"we wait to \"</string>
    <string name="search_users_start">long tap to see the details\nslide to remove from your friends list/requests list</string>
    <string name="it_is_you">It is you</string>
    <string name="please_conpirm">please confirm</string>
    <string name="you_have_no_requests">you have no requests</string>
    <string name="your_friend">your friend</string>
    <string name="would_you_like_to_open_chat_with">\"would you like to open chat with \"</string>
    <string name="you_have_no_friends">you have no friends</string>
    <string name="send_request_to">\"send request to \"</string>
    <string name="would_you_like_to_send_a_friend_request_to">\"would you like to send a friend request to \"</string>
    <string name="send_him_a_request">send him a request</string>
    <string name="user_list_start">tap to go to chat with this user\nlong tap to send him a friend request</string>
    <string name="there_is_a_request">there is a request</string>
    <string name="you_are_friends">you are friends</string>
    <string name="Would_you_like_to_add">\"Would you like to add \"</string>
    <string name="to_your_friends">\" to your friends?\"</string>
    <string name="welcome_to_database">welcome to database</string>
    <string name="successful">successful</string>
    <string name="unsuccessful">unsuccessful</string>
    <string name="the_game">\"the game \"</string>
    <string name="added_to_database">\" added to database\"</string>
    <string name="is_not_added_to_database">\" is not added to database\"</string>
    <string name="type_a_message">Type a message...</string>
    <string name="logout">Logout</string>
    <string name="favorites">favorites</string>
    <string name="requests">requests</string>
    <string name="friends">friends</string>
    <string name="search_users">Search users</string>
    <string name="other">other</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>