<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SearchUsers">

    <SearchView
        android:id="@+id/search_input"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:queryHint="Search here..."></SearchView>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            />


        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_favorite_games"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite_games"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genres"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_platforms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/platforms"
            />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_rec"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>